--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.jpa.show-sql=true
 spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
-spring.datasource.url=jdbc:mysql://mediqbank.cmcr9fuajipl.us-east-1.rds.amazonaws.com:3306/mediqbank
-spring.datasource.username=admin
-spring.datasource.password=lakmal93
+spring.datasource.url=jdbc:mysql://localhost:3306/qbank
+spring.datasource.username=root
+spring.datasource.password=
