--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
 spring.datasource.url=jdbc:mysql://localhost:3306/qbank
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=lakmal93
